# rust_parallel_operations

./: Cargo.toml  README.md
src/: error.rs  lib.rs
src/ci/: mod.rs
src/di/: handler_di.rs  mod.rs
src/queries/: mod.rs  operation1.rs  operation2.rs
