[package]
name = "rust_parallel_operations"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
aws-types = "0.54.1"
aws-config = "0.54.1"
aws-sdk-dynamodb = "0.24.0"
tokio = { version = "1", features = ["macros"] }
async-trait = "0.1"
lambda_runtime = "0.7"
typed-builder = "0.13.0"
serde_json = "1"
serde = {version = "1", features = ["derive"] }
futures = "0.3"

[dev-dependencies]
mockall = "0.11"